# harness-engineering

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  progress.md  pyproject.toml
.github/workflows/: _gate.yml  ci.yml  docs.yml  release.yml
designs/: standout.md
docs/: architecture.md  cli.md  comparison.md  docs-fix-plan.md  faq.md  index.md  plan.md  quickstart.md  roadmap.md
docs/contracts/: user-code-execution.md
docs/cookbook/: cache-and-speculate.md  debug-a-trajectory.md  fuzz-a-tool.md  index.md  observability.md  prompt-submit-contracts.md  redact-pii.md  replay-evaluation.md
docs/modules/: agents.md  attribute.md  cache.md  contracts.md  debug.md  fuzz.md  hooks.md  memory.md  plan.md  policy.md  privacy.md  prompts.md  replay.md  runner.md  sandbox.md  speculate.md  streaming.md  telemetry.md  tools.md
docs/waves/: initial-scaffold.md  wave-1.md  wave-10.md  wave-11.md  wave-12.md  wave-13a.md  wave-2.md  wave-3.md  wave-4.md  wave-5.md  wave-6.md  wave-7.md  wave-8.md  wave-9.md
examples/: README.md  anthropic_runner.py  attribute.py  cache.py  contracts.py  counterfactual.py  cross_session.py  debug.py  diff_eval.py  end_to_end.py  fuzz.py  otel.py  plan.py  plan_inference.py  privacy.py  speculate.py
src/harness/: __init__.py  cli.py
src/harness/agents/: __init__.py  definition.py  orchestrator.py
src/harness/attribute/: __init__.py  ablation.py  cache.py  similarity.py
src/harness/cache/: __init__.py  audit.py  cli.py  store.py  watcher.py
src/harness/contracts/: __init__.py  check.py  contract.py  dfa.py  patterns.py  predicates.py  runtime.py
src/harness/debug/: __init__.py  cli.py  context.py  dap.py  dap_messages.py  dap_protocol.py  repl.py  runner.py
src/harness/fuzz/: __init__.py  decorators.py  runner.py  strategies.py
src/harness/hooks/: __init__.py  events.py  runner.py
src/harness/memory/: __init__.py  record.py  session.py  store.py
src/harness/plan/: __init__.py  derive.py  guard.py  infer.py  plan.py
src/harness/policy/: __init__.py  tool_policies.py
src/harness/privacy/: __init__.py  boundary.py  detectors.py  events.py  packs.py  presidio.py
tests/: conftest.py  test_public_api.py
tests/agents/: test_orchestrator.py
tests/attribute/: test_ablation.py  test_similarity.py
tests/cache/: test_audit.py  test_store.py  test_watcher.py
tests/contracts/: test_check.py  test_patterns.py  test_predicates.py  test_runtime.py
tests/debug/: test_cli.py  test_context.py  test_dap.py  test_dap_cli.py  test_dap_protocol.py  test_repl.py  test_runner.py
tests/examples/: test_examples_run.py
tests/fuzz/: test_decorators.py  test_runner.py  test_strategies.py
tests/hooks/: test_runner.py
tests/integration/: test_concrete_vendor_runner.py  test_dap_end_to_end.py  test_orchestrator_runner_hooks_policy.py  test_privacy_speculate_cache.py  test_replay_counterfactual_compare.py
tests/memory/: test_record.py  test_session.py  test_store.py
tests/plan/: test_derive.py  test_guard.py  test_infer.py  test_plan.py
tests/policy/: test_tool_policies.py
tests/privacy/: test_boundary.py  test_detectors.py  test_presidio.py
tests/prompts/: test_compaction.py  test_files.py  test_image_and_files.py  test_messages.py
tests/replay/: test_counterfactual.py  test_diff_eval.py  test_harness.py  test_runner.py
tests/runner/: fakes.py  fakes_openai.py  test_anthropic.py  test_anthropic_pin_parity.py  test_demo.py  test_openai_compat.py  test_streaming.py
tests/sandbox/: test_paths.py  test_process.py
tests/speculate/: test_cross_session.py  test_integration.py  test_predictor.py  test_speculator.py
tests/telemetry/: test_correlation.py  test_integration.py  test_otel.py  test_redactor.py  test_sinks.py
tests/tools/: test_dispatcher.py  test_schema.py
(+32 files in other folders)
