[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-engineering"
version = "0.2.0"
description = "Opensource toolbox for harness engineering."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]
anthropic = ["anthropic>=0.60"]
openai-compat = ["openai>=1.40"]
fuzz = ["hypothesis>=6"]
attribute = ["sentence-transformers>=2"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
harness = "harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["harness"]
mypy_path = "src"
